<resources>
    <string name="app_name">Score Keeper</string>
    <string name="american_football">American Football</string>
    <string name="team_a">Team A</string>
    <string name="_0A">0</string>
    <string name="_6_touchdownA">+6 (Touchdown)</string>
    <string name="_3_fieldGoalA">+3 (field goal)</string>
    <string name="_2_safetyA">+2 (safety)</string>
    <string name="_1_pointA">+1 Point</string>
    <string name="_2_pointsA">+2 Points</string>
    <string name="team_b">team B</string>
    <string name="_0B">0</string>
    <string name="_6_touchdownB">+6 (Touchdown)</string>
    <string name="_2_safetyB">+2 (safety)</string>
    <string name="_3_fieldGoalB">+3 (field goal)</string>
    <string name="_1_pointB">+1 Point</string>
    <string name="_2_pointsB">+2 Points</string>
    <string name="reset">reset</string>
</resources>
