<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/football"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/american_football"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#055E08"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="392dp"
        android:layout_height="430dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/football"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/team_a"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/group_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/_0A"
                android:textAlignment="center"
                android:textColor="#080908"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/touchdown1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:onClick="touchDownA"
                android:text="@string/_6_touchdownA"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/fieldGoal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="fieldGoalA"
                android:text="@string/_3_fieldGoalA"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/safety1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="safetyA"
                android:text="@string/_2_safetyA"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/extra_point1_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="aExtraPoint1"
                android:text="@string/_1_pointA"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/extra_point2_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="aExtraPoint2"
                android:text="@string/_2_pointsA"
                android:textColor="#ffffff"
                android:textSize="16sp" />


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#073909" />

        <LinearLayout
            android:id="@+id/team_b"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/group_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/_0B"
                android:textAlignment="center"
                android:textColor="#0A0B0A"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/touchdown2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:onClick="touchDownB"
                android:text="@string/_6_touchdownB"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/fieldGoal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="fieldGoalB"
                android:text="@string/_3_fieldGoalB"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/safety2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="safetyB"
                android:text="@string/_2_safetyB"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/extra_point1_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="bExtraPoint1"
                android:text="@string/_1_pointB"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/extra_point2_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="bExtraPoint2"
                android:text="@string/_2_pointsB"
                android:textColor="#ffffff"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:onClick="resetGame"
        android:text="@string/reset"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main" />

</androidx.constraintlayout.widget.ConstraintLayout>